; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_parse.c_jmp_dropval.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_lj_parse.c_jmp_dropval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NO_JMP = common dso_local global i64 0, align 8
@NO_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @jmp_dropval to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @jmp_dropval(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  br label %5

5:                                                ; preds = %14, %2
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @NO_JMP, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %18

9:                                                ; preds = %5
  %10 = load i32*, i32** %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = load i32, i32* @NO_REG, align 4
  %13 = call i32 @jmp_patchtestreg(i32* %10, i64 %11, i32 %12)
  br label %14

14:                                               ; preds = %9
  %15 = load i32*, i32** %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = call i64 @jmp_next(i32* %15, i64 %16)
  store i64 %17, i64* %4, align 8
  br label %5

18:                                               ; preds = %5
  ret void
}

declare dso_local i32 @jmp_patchtestreg(i32*, i64, i32) #1

declare dso_local i64 @jmp_next(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
